# asm-parser

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  conanfile.txt  known-leaks.txt  prettyjson.js  setup.sh  test.sh  test7000.sh
.github/workflows/: benchmark.yml  build.yml
bench-results/: baseline.json
resources/: asmtext_filter_tests.ce-bug-1648.approved.txt  asmtext_filter_tests.ce-bug-3963.approved.txt  asmtext_filter_tests.ce-bug-4848.approved.txt  asmtext_filter_tests.ce-bug-7000.approved.txt  asmtext_filter_tests.ce-bug-8809.approved.txt  asmtext_filter_tests.example-llvm-objdump.approved.txt  asmtext_filter_tests.filter_example.approved.txt  asmtext_filter_tests.filter_example_intel.approved.txt  asmtext_filter_tests.gcc12_bin_fmt_O2_flto.approved.txt  asmtext_filter_tests.gcc12_sort_object_reloc.approved.txt  bigboostexample.cpp  ce-bug-1648.asm  ce-bug-3963.asm  ce-bug-4848.asm  ce-bug-7000.asm  ce-bug-8809.asm  data_in_unused_label.asm  demangled_tiny.asm  example-llvm-objdump.asm  example.asm  example.cpp  example_intel.asm  gcc12_sort_object_reloc.asm  gcc14_bin_fmt_print_O0.asm.xz
scripts/: aggregate_bench.py  compare_bench.py  run-benchmarks.sh
src/: CMakeLists.txt  main.cpp
src/assembly/: parser.cpp  parser.hpp  regexes.hpp
src/objdump/: parser.cpp  parser.hpp
src/test/: CMakeLists.txt  asmtext_filter_tests.cpp  objdump_benchmark.cpp  test_test.cpp
src/types/: filter.hpp  line.hpp  parser.hpp  state.cpp  state.hpp
src/utils/: jsonwriter.cpp  jsonwriter.hpp  library_detection.cpp  library_detection.hpp  regexes.hpp  regexwrappers.cpp  regexwrappers.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_test.cpp
